# swarmbotics-connectivity-layer

./: .gitignore  BLUEPRINT.txt  CMakeLists.txt  Makefile  README.md
radio-interfaces/cellular-5g/: modem-controller.py
radio-interfaces/leo-satcom/: satcom-api-client.py
radio-interfaces/manet-mesh/: mesh-topology-tracker.cpp  tactical-radio-driver.py
routing-manager/config/: routing-policy.yaml
routing-manager/scripts/: failover-daemon.py
routing-manager/src/: link-quality-monitor.cpp  traffic-shaper.cpp
security-layer/intrusion-detection/: ids-rules.conf
security-layer/nat-traversal/: custom-hole-punching.cpp
security-layer/vpn-tunnels/: key-rotation-daemon.py  wireguard-setup.sh
streaming-pipeline/media-encoding/: gstreamer-h265-hw.sh  udp-telemetry-mux.cpp
streaming-pipeline/qos-manager/: adaptive-bitrate.py
streaming-pipeline/webrtc-stack/: ice-config.json  signaling-server.js
